take out the bg opaque image to fix z-index issues and use a simple logo instead

--- a/app/stylesheets/partials/_one_col.scss
+++ b/app/stylesheets/partials/_one_col.scss
@@ -20,6 +20,11 @@ body.one_col {
         margin: 0;
       }
     }
+    #header-logo { 
+      position: absolute;
+      left: 730px;
+      top: 5px; 
+    }
     #header-links {
       float: right;
       margin-bottom: 20px;
@@ -32,10 +37,9 @@ body.one_col {
 
   #content {
     position: relative;
-    z-index: 1;
     min-height: 100%;
     clear: left;
-    padding: 20px;
+    padding: 50px;
     border: solid 1px #b3b3b3;
   }
 
@@ -48,7 +52,6 @@ body.one_col {
     position: absolute;
     left: 450px;
     top: 395px;
-    z-index: -1;
   }
 
   #content h2 {
